[package]
name = "rslike"
version = "0.0.1"
authors = ["Jonny Gilchrist <jonnygilchrist@gmail.com>"]

[[bin]]
name = "rslike"
doc = false
test = false
doctest = false

[lib]
name = "rslike"
# TODO: re-enable doctests when linking issue is fixed
doctest = false

[dependencies.tcod]
git = "https://github.com/jgilchrist/tcod-rs"
rev = "f62c56a"
